[gd_scene load_steps=9 format=3 uid="uid://cfxmvyqrm2440"]

[ext_resource type="Script" path="res://scripts/pong.gd" id="1_1pg36"]
[ext_resource type="PackedScene" uid="uid://cvwx7fusrx673" path="res://scenes/hud.tscn" id="2_hklih"]
[ext_resource type="PackedScene" uid="uid://o0olaisviufp" path="res://scenes/paddle.tscn" id="2_hl8h7"]
[ext_resource type="PackedScene" uid="uid://devlcbviw0omk" path="res://scenes/player_paddle_controller.tscn" id="3_k2408"]
[ext_resource type="PackedScene" uid="uid://dtamawvxfmenu" path="res://scenes/ball.tscn" id="3_rtck7"]
[ext_resource type="PackedScene" uid="uid://dpty8cjw8yrms" path="res://scenes/wall.tscn" id="3_yj7i1"]
[ext_resource type="PackedScene" uid="uid://6wodr35qarhp" path="res://scenes/edge_detector.tscn" id="7_eoa5s"]
[ext_resource type="Script" path="res://scripts/ai_paddle_controller.gd" id="7_jsrsr"]

[node name="Pong" type="Node2D"]
script = ExtResource("1_1pg36")

[node name="HUD" parent="." instance=ExtResource("2_hklih")]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -161.0
offset_top = -63.0
offset_right = 1424.0
offset_bottom = 816.0
color = Color(0, 0, 0, 1)

[node name="Ball" parent="." instance=ExtResource("3_rtck7")]
position = Vector2(123, 525)
input_pickable = true

[node name="Wall" parent="." instance=ExtResource("3_yj7i1")]
position = Vector2(-1, 0)

[node name="Wall2" parent="." instance=ExtResource("3_yj7i1")]
position = Vector2(6, 680)

[node name="PlayerPaddleController" parent="." instance=ExtResource("3_k2408")]

[node name="Paddle" parent="PlayerPaddleController" instance=ExtResource("2_hl8h7")]
position = Vector2(0.00347596, -215.577)

[node name="PlayerPaddleController2" parent="." instance=ExtResource("3_k2408")]
script = ExtResource("7_jsrsr")

[node name="Paddle" parent="PlayerPaddleController2" instance=ExtResource("2_hl8h7")]
position = Vector2(1279.07, -200.073)

[node name="Edge0" parent="." instance=ExtResource("7_eoa5s")]

[node name="Edge1" parent="." instance=ExtResource("7_eoa5s")]
position = Vector2(1333, 396)
rotation = 3.14159
player_index = 1

[connection signal="score_updated" from="." to="HUD" method="_on_pong_score_updated"]
